opam-version: "1.2"
maintainer:   "ql272@cl.cam.ac.uk"
homepage:    "https://github.com/mirage/mirage-net-unix"
bug-reports: "https://github.com/mirage/mirage-net-unix/issues"
dev-repo:    "https://github.com/mirage/mirage-net-unix.git"
license:     "ISC"
doc:         "https://mirage.github.io/mirage-net-unix/"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder"       {build & >= "1.0+beta9"}
  "cstruct"        {>= "1.7.1"}
  "lwt"            {>= "2.4.3"}
  "ipaddr"         {>= "2.4.0"}
  "mirage-net-lwt" {>= "1.0.0"}
  "io-page"        {>= "1.0.1"}
  "result"
]

depexts: [
  [["alpine"] ["linux-headers"]]
]

available: [ ocaml-version >= "4.02.3"]
