opam-version: "2.0"
maintainer: "Richard Mortier <mort@cantab.net>"
authors: [ "Qi Li" "Richard Mortier" ]
license: "ISC"

homepage:    "https://github.com/me-box/mirage-net-psock"
dev-repo:    "git+https://github.com/me-box/mirage-net-psock.git"
bug-reports: "https://github.com/me-box/mirage-net-psock/issues"
doc:         "https://me-box.github.io/mirage-net-psock/"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "cstruct"        {>= "1.7.1"}
  "cstruct-lwt"
  "dune"           {build}
  "io-page"        {>= "1.0.1"}
  "io-page-unix"
  "mirage-net-lwt" {>= "1.0.0"}
  "ocaml"          {>= "4.07.1"}
]

depexts: [
  [["alpine"] ["linux-headers" "m4" "linux-vanilla-dev" "musl-dev"]]
]

synopsis: "Support for Mirage network abstraction over `SOCK_RAW`"
